trying to integrate Loan and Hold functionality